emu_tests/src/macro_usage_7.stderr
error: ABI function cannot be tagged with `#[gpu_use]`
 --> $DIR/macro_usage_7.rs:4:1
  |
4 | #[gpu_use(do_something)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^
